Feat: course filter (#18)
